WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
17509
Acid3 expects different exceptions for surroundContents calls involving comment nodes (affects Acid3 test 11)
https://bugs.webkit.org/show_bug.cgi?id=17509
Summary
Acid3 expects different exceptions for surroundContents calls involving comme...
Darin Adler
Reported
2008-02-24 01:01:21 PST
This looks like low-hanging fruit to me. Should be easy to fix.
Attachments
the fix
(7.65 KB, patch)
2008-03-16 20:26 PDT
,
Maciej Stachowiak
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2008-02-25 15:57:00 PST
I started working on this and I think it's not as easy as I initially thought. The problem is that we need to check all the children that will be put inside the new element to see if they are types that are allowed. The code isn't structured to make that easy. It still looks *relatively* straightforward, but I would no longer say easy.
Maciej Stachowiak
Comment 2
2008-03-16 20:26:36 PDT
Created
attachment 19822
[details]
the fix
Darin Adler
Comment 3
2008-03-16 20:31:49 PDT
Comment on
attachment 19822
[details]
the fix r=me
Lucas Forschler
Comment 5
2019-02-06 09:03:17 PST
Mass moving XML DOM bugs to the "DOM" Component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug